--- a/Project-Drive/package.json
+++ b/Project-Drive/package.json
@@ -12,6 +12,8 @@
   "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "mongoose": "^8.15.0"
   }
 }
